[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/graph/ui/exit.png" type="Texture" id=1]
[ext_resource path="res://Assets/graph/ui/main_menu.png" type="Texture" id=2]
[ext_resource path="res://Assets/graph/ui/continue_hover.png" type="Texture" id=3]
[ext_resource path="res://Assets/graph/ui/continue.png" type="Texture" id=4]
[ext_resource path="res://Assets/graph/ui/main_menu_hover.png" type="Texture" id=5]
[ext_resource path="res://Assets/graph/ui/exit_hover.png" type="Texture" id=6]
[ext_resource path="res://Assets/graph/ui/encadrement.png" type="Texture" id=7]
[ext_resource path="res://Assets/graph/ui/paused.png" type="Texture" id=8]
[ext_resource path="res://UI/PauseOverlay.gd" type="Script" id=9]
[ext_resource path="res://Assets/graph/UI/continue.png" type="Texture" id=10]

[node name="UserInterfacePause" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.152941, 0.176471, 0.478431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 312.0
margin_right = -312.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="TextureButton" parent="PauseOverlay/PauseMenu"]
margin_top = 176.0
margin_right = 400.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 182.502, 34 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 4 )
stretch_mode = 5

[node name="MainMenu" type="TextureButton" parent="PauseOverlay/PauseMenu"]
margin_top = 260.0
margin_right = 400.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 182.502, 37 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="PauseOverlay/PauseMenu"]
margin_top = 344.0
margin_right = 400.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( 182.502, 40 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 6 )

[node name="paused" type="Sprite" parent="PauseOverlay"]
position = Vector2( 512, 104 )
texture = ExtResource( 8 )

[node name="encadrement" type="Sprite" parent="PauseOverlay"]
position = Vector2( 512, 304 )
texture = ExtResource( 7 )
__meta__ = {
"_editor_description_": ""
}
[connection signal="pressed" from="PauseOverlay/PauseMenu/Continue" to="." method="continue_button"]
[connection signal="pressed" from="PauseOverlay/PauseMenu/Exit" to="." method="exit_button"]
